# test_react

./: .dockerignore  .gitignore  POETRY_GUIDE.md  deploy-prod.sh  docker-compose.prod.yml  docker-compose.yml  memo.txt  package-lock.json  package.json
.devcontainer/: devcontainer-backend.json  devcontainer.json  launch.json
backend/: Dockerfile  Dockerfile.prod  POETRY_README.md  entrypoint.prod.sh  pyproject.toml
backend/accounts/: apps.py  models.py  urls.py  views.py
backend/accounts/migrations/: 0001_initial.py
backend/app/: urls.py
backend/app/settings/: base.py  local.py
backend/requirements/: base.txt  local.txt  production.txt
data/pgadmin/: pgadmin4.db
data/pgadmin/sessions/: 2d83e427-2c09-47fc-a72a-1b9c5417952a  730b11ea-1129-436c-82ac-5ebdd3b60177  7ee53c23-69a9-4a40-90a2-ee564ca35793  f110f027-ab8f-40c6-9b0b-cf0d09e49113
deploy/: README.md
deploy/configs/cloud/: cloudbuild.yaml
deploy/configs/docker/: docker-compose.frontend-only.yml  docker-compose.prod.yml
deploy/configs/nginx/: default.conf  nginx.conf
deploy/docs/: CLOUD_RUN_DEPLOYMENT.md  EC2_DEPLOYMENT_GUIDE.md  FRONTEND_ONLY_DEPLOYMENT.md
frontend/: .dockerignore  .dockerignore.cloudrun  Dockerfile  Dockerfile.cloudrun  Dockerfile.prod  Dockerfile.prod.standalone  install-libraries.sh  package-lock.json  package.json  tsconfig.json
frontend/nginx/: nginx.conf
frontend/public/: index.html  manifest.json
frontend/src/: App.tsx  index.css  index.tsx
postgres_data/: pg_hba.conf  postmaster.pid
postgres_data/global/: 1260  1262  2671  2676  pg_control  pg_internal.init
(+105 files in other folders)
