[tool.poetry]
name = "backend"
version = "0.1.0"
description = "Django backend application"
authors = ["Your Name <your.email@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.10"
psycopg2-binary = "^2.9.9"

[tool.poetry.group.dev.dependencies]
django-cors-headers = "^4.3.1"

[tool.poetry.group.prod.dependencies]
gunicorn = "^21.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "manage:main"
